[gd_scene load_steps=20 format=3 uid="uid://jpi2vltxy7ff"]

[ext_resource type="Script" path="res://scripts/game_world.gd" id="1_ymw2k"]
[ext_resource type="Texture2D" uid="uid://cg3jj2s47ofxj" path="res://assets/vfx/tiles/wall_tile.png" id="2_ji1l6"]
[ext_resource type="Material" uid="uid://daitmkm6lwgq0" path="res://editor/fog_material.tres" id="3_4he7n"]
[ext_resource type="PackedScene" uid="uid://uklat60xqlk6" path="res://scenes/player.tscn" id="4_jgs0n"]
[ext_resource type="Texture2D" uid="uid://dwle4fws8u3xn" path="res://assets/vfx/misc/map.png" id="5_1gdxp"]
[ext_resource type="Texture2D" uid="uid://dmlthsrlptg7t" path="res://assets/vfx/misc/mouse_cursor.png" id="6_7734v"]
[ext_resource type="Theme" uid="uid://bbrmpuciuvk1a" path="res://editor/text_theme.tres" id="7_vk2p7"]
[ext_resource type="AudioStream" uid="uid://xfqqnifhr06u" path="res://assets/sfx/music/School Days 2 theme.wav" id="9_0ps18"]
[ext_resource type="AudioStream" uid="uid://bix4vlcwjo80a" path="res://assets/sfx/music/Aberration.wav" id="10_qqbrr"]
[ext_resource type="Shader" path="res://scenes/levels/glitch.gdshader" id="11_lsatn"]
[ext_resource type="AudioStream" uid="uid://banyqyk11383s" path="res://assets/sfx/sounds/Noise Glitch 3.mp3" id="11_pn1iv"]
[ext_resource type="AudioStream" uid="uid://dolqaaingnm0h" path="res://assets/sfx/sounds/map.wav" id="12_6sgnw"]

[sub_resource type="Animation" id="Animation_f5j0t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer_Transition/CanvasLayer/Control/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Sprite2D:material:shader_parameter/fade")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e50y3"]
resource_name = "enter_level"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer_Transition/CanvasLayer/Control/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gxwvw"]
resource_name = "exit_level"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer_Transition/CanvasLayer/Control/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o1nir"]
resource_name = "glitch"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Sprite2D:material:shader_parameter/fade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.01]
}

[sub_resource type="Animation" id="Animation_63ltq"]
resource_name = "glitch_exit"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Sprite2D:material:shader_parameter/fade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkiuc"]
_data = {
"RESET": SubResource("Animation_f5j0t"),
"enter_level": SubResource("Animation_e50y3"),
"exit_level": SubResource("Animation_gxwvw"),
"glitch_enter": SubResource("Animation_o1nir"),
"glitch_exit": SubResource("Animation_63ltq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1u1gt"]
shader = ExtResource("11_lsatn")
shader_parameter/shake_power = 0.03
shader_parameter/shake_block_size = 30.5
shader_parameter/fade = 0.0
shader_parameter/direction_r = Vector2(1, 0)
shader_parameter/direction_g = Vector2(0.4, 1)
shader_parameter/direction_b = Vector2(-0.7, -0.3)

[node name="game_world" type="Node2D"]
script = ExtResource("1_ymw2k")

[node name="Black" type="Sprite2D" parent="."]
modulate = Color(0.0784314, 0.137255, 0.227451, 1)
position = Vector2(354, -628)
scale = Vector2(200, 200)
texture = ExtResource("2_ji1l6")

[node name="Shader_CanvasLayer" type="CanvasLayer" parent="."]
layer = 10
follow_viewport_enabled = true
follow_viewport_scale = 1.2

[node name="Fog" type="Sprite2D" parent="Shader_CanvasLayer"]
material = ExtResource("3_4he7n")
position = Vector2(280, -527)
scale = Vector2(140, 140)
texture = ExtResource("2_ji1l6")

[node name="AnimationPlayer_Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bkiuc")
}

[node name="CanvasLayer" type="CanvasLayer" parent="AnimationPlayer_Transition"]
layer = 11

[node name="Control" type="Control" parent="AnimationPlayer_Transition/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer_Transition/CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer_Player" type="CanvasLayer" parent="."]
layer = 5
follow_viewport_enabled = true

[node name="Player" parent="CanvasLayer_Player" instance=ExtResource("4_jgs0n")]

[node name="Camera2D" type="Camera2D" parent="CanvasLayer_Player/Player"]
position_smoothing_enabled = true

[node name="CanvasLayer_Map" type="CanvasLayer" parent="."]
layer = 8
visible = false
follow_viewport_enabled = true

[node name="Map" type="Sprite2D" parent="CanvasLayer_Map"]
z_index = 20
texture_filter = 1
texture = ExtResource("5_1gdxp")

[node name="CanvasLayer_Mouse" type="CanvasLayer" parent="."]
layer = 10
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer_Mouse"]
texture_filter = 1
texture = ExtResource("6_7734v")

[node name="CanvasLayer_dialog" type="CanvasLayer" parent="."]
layer = 9
visible = false

[node name="Control" type="Control" parent="CanvasLayer_dialog"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 192.0
offset_right = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer_dialog/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Dialog_RTLabel" type="RichTextLabel" parent="CanvasLayer_dialog/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_vk2p7")
bbcode_enabled = true
text = "[center] This is a test dialog! [center]"
scroll_active = false
scroll_following = true

[node name="DialogTimer" type="Timer" parent="CanvasLayer_dialog"]
wait_time = 0.05
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 11
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_1u1gt")
scale = Vector2(64, 64)
texture = ExtResource("2_ji1l6")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0ps18")
autoplay = true

[node name="Aberration" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qqbrr")

[node name="GlitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_pn1iv")
volume_db = -5.0

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="RandomNoiseTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="MapSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_6sgnw")
